# rust-radio-sx127x

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  snapcraft.yaml  wrapper.h
.cargo/: config
.github/workflows/: rust.yml
configs/: pi-ci-sx127x.toml  rpi.toml
examples/: lora_spi_gps.rs  lora_spi_receive.rs  lora_spi_send.rs
examples/memoryMaps/STM32F030XC/: memory.x
examples/memoryMaps/STM32F303XC/: memory.x
examples/memoryMaps/STM32F401/: memory.x
examples/memoryMaps/STM32H742/: memory.x
examples/memoryMaps/STM32L100/: memory.x
memoryMaps/STM32F101/: memory.x
memoryMaps/STM32F411/: memory.x
memoryMaps/STM32F722/: memory.x
memoryMaps/STM32L0X2/: memory.x
memoryMaps/STM32L151/: memory.x
memoryMaps/STM32L4X2/: memory.x
src/: base.rs  device.rs  fsk.rs  lib.rs  lora.rs  prelude.rs  radio.h  regs.rs  sx1272.rs  sx1276.rs  wrapper.h
src/bindings/: mod.rs
src/device/: common.rs  fsk.rs  lora.rs  mod.rs  regs.rs
src/ffi/: mod.rs
src/sx1276/: sx1276.c  sx1276.h
src/util/: main.rs  operations.rs  options.rs
tests/: integration.rs
