[package]
name = "radio-sx127x"
description = "Rust driver for the Semtec SX127x Sub GHZ LoRa Radio ICs"
version = "0.11.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
repository = "https://github.com/ryankurte/rust-radio-sx127x"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "driver-pal/hal", "simplelog", "humantime" ] 
default = [ "util", "serde", "driver-pal/hal-cp2130", "driver-pal/hal-linux" ]

# features for examples
examples = []
compat   = ["embedded-hal-compat"]

stm32f1xx = []
stm32f4xx = []

stm32f103   = ["stm32f1xx-hal/stm32f103",   "stm32f1xx-hal/rt", "examples"]
stm32f411   = ["stm32f4xx-hal/stm32f411",   "stm32f4xx-hal/rt", "examples"]

[dependencies]
embedded-hal-compat =  { version = "0.1.3", optional = true}
#embedded-hal-compat = { git = "https://github.com/ryankurte/embedded-hal-compat.git", branch = "main", optional = true}
libc = "0.2"
log = { version = "0.4" }
bitflags = "1.0"
radio = "0.9.0"
embedded-hal = "1.0.0-alpha.4"

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
structopt = { version = "0.3.21", optional = true }
simplelog = { version = "0.8.0", optional = true }
humantime = { version = "2.0.0", optional = true }
linux-embedded-hal = { version = "0.4.0-alpha.0", optional = true }

# Next could be dev-dependencies since they are only for examples, but 
#  dev-dependencies do not allow optional (as of cargo 1.44.1).
stm32f1xx-hal = {version = "^0.7.0", optional = true} 
stm32f4xx-hal = {version = "^0.8.3", optional = true} 

old-e-h      = {version = "0.2.4", package = "embedded-hal" }

driver-cp2130 = { version = "1.0.0-alpha.2", optional = true }

[dependencies.driver-pal]
version = "0.8.0-alpha.2"
default-features = false

[dev-dependencies]                     # for examples
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
panic-semihosting = ">=0.5.2"
heapless = ">=0.7.0"                   # for example lora_spi_gps
nb = ">=0.1.2"                         # for example lora_spi_gps


[[bin]]
name = "sx127x-util"
path = "src/util/main.rs"
required-features = ["util"]

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["default", "util"]


[[example]]
name = "lora_spi_send"
path = "examples/lora_spi_send.rs"
required-features = ["examples"]

[[example]]
name = "lora_spi_receive"
path = "examples/lora_spi_receive.rs"
required-features = ["examples"]

[[example]]
name = "lora_spi_gps"
path = "examples/lora_spi_gps.rs"
required-features = ["examples"]
