[package]
name = "radio-sx127x"
description = "Rust driver for the Semtec SX127x Sub GHZ LoRa Radio ICs"
version = "0.13.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
repository = "https://github.com/ryankurte/rust-radio-sx127x"
license = "MPL-2.0"
edition = "2018"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sx127x-util-{ target }.tgz"
bin-dir = "{ bin }-{ target }{ format }"

[features]
util = [ "structopt", "driver-pal", "driver-pal/hal", "simplelog", "humantime" ] 
default = [ "util", "serde", "driver-pal/hal-cp2130", "driver-pal/hal-linux" ]

[dependencies]
radio = "0.11.0"
embedded-hal = "1.0.0-alpha.7"
libc = "0.2"
log = { version = "0.4" }
bitflags = "1.0"

driver-pal = { version = "0.8.0-alpha.6", default_features = false, optional=true }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
structopt = { version = "0.3.21", optional = true }
simplelog = { version = "0.8.0", optional = true }
humantime = { version = "2.0.0", optional = true }


[dev-dependencies]
color-backtrace = "0.5"


[[bin]]
name = "sx127x-util"
path = "src/util/main.rs"
required-features = ["util"]

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["utils"]

[patch.crates-io]
